<resources>
    <string name="app_name">Explore the Solar System</string>
    <string name="title_activity_game">GameActivity</string>

    <string name="play_button">Play Game</string>
    <string name="high_scores">High Scores</string>
    <string name="how_to_play">How To Play</string>
    <string name="settings">Settings</string>
    <string name="continue_on">Touch to\nContinue.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="score">Score: </string>
    <string name="score_0">0</string>
    <string name="timer">Timer: </string>
    <string name="timer_minute">60</string>
    <string name="true_false_title">T/F Quiz: Left = True. Right = False</string>

    <string name="mercury">Mercury</string>
    <string name="venus">Venus</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="uranus">Uranus</string>
    <string name="neptune">Neptune</string>

    <string name="create_table">CREATE TABLE IF NOT EXISTS scoretable (_id INTEGER PRIMARY KEY AUTOINCREMENT, score INTEGER, diff STRING, date STRING)</string>
    <string name="delete_table">DROP TABLE IF EXISTS %1$s</string>

    <string name="send_to">Share score to..</string>
    <string name="score_diff_date">Score | Difficulty | Date</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="game_over">Game Over</string>
    <string name="difficulty">Difficulty:</string>
    <string name="share_score">Share Score</string>
    <string name="retry">Retry</string>
    <string name="music_on_off">Music On/Off</string>
    <string name="time_difficulty">Time Difficulty:</string>
    <string name="easy">Easy</string>
    <string name="regular">Regular</string>
    <string name="hard">Hard</string>
    <string name="delete_scores">Delete Scores</string>
    <string name="drag_drop"><![CDATA[Drag & Drop]]></string>
    <string name="drag_drop_desc">Drag and drop the planets at the bottom of the screen to their correct positions in the Solar System. </string>
    <string name="tf_quiz_desc">While holding you device in the horizontal position: Tilt your device left to answer TRUE or, tilt your device right to answer FALSE</string>
    <string name="true_false_quiz">True/False Quiz</string>

</resources>
