<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeGame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/outer_space"
    android:focusable="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/currentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView6"
        android:text="@string/score_0"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@android:color/background_light"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="5sp"
        android:layout_toEndOf="@+id/linearLayout"
        android:text="@string/score"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@android:color/background_light"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="11dp"
        android:layout_toStartOf="@+id/timer"
        android:text="@string/timer"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@android:color/background_light"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="31dp"
        android:text="@string/timer_minute"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@android:color/background_light"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="16dp" />

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/currentScore"
        android:orientation="horizontal"
        android:paddingBottom="10sp">


        <ImageView
            android:id="@+id/mercuryBlank"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/mercury"
            app:srcCompat="@drawable/planet_unknown" />

        <ImageView
            android:id="@+id/venusBlank"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/venus"
            app:srcCompat="@drawable/planet_unknown"
            android:layout_alignTop="@+id/mercuryBlank"
            android:layout_toEndOf="@+id/mercuryBlank" />

        <ImageView
            android:id="@+id/earthBlank"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:contentDescription="@string/earth"
            app:srcCompat="@drawable/planet_unknown"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/venusBlank" />

        <ImageView
            android:id="@+id/marsBlank"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginStart="13dp"
            android:contentDescription="@string/mars"
            app:srcCompat="@drawable/planet_unknown"
            android:layout_alignTop="@+id/venusBlank"
            android:layout_toEndOf="@+id/earthBlank" />

        <ImageView
            android:id="@+id/jupiterBlank"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/jupiter"
            app:srcCompat="@drawable/planet_unknown"
            android:layout_below="@+id/venusBlank"
            android:layout_toEndOf="@+id/marsBlank" />

        <ImageView
            android:id="@+id/saturnBlank"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/saturn"
            app:srcCompat="@drawable/planet_unknown"
            android:layout_alignTop="@+id/mercuryBlank"
            android:layout_toEndOf="@+id/jupiterBlank" />

        <ImageView
            android:id="@+id/uranusBlank"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginStart="11dp"
            android:contentDescription="@string/uranus"
            app:srcCompat="@drawable/planet_unknown"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/saturnBlank" />

        <ImageView
            android:id="@+id/neptuneBlank"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:contentDescription="@string/neptune"
            app:srcCompat="@drawable/planet_unknown"
            android:layout_below="@+id/saturnBlank"
            android:layout_toEndOf="@+id/uranusBlank"
            android:layout_marginStart="13dp" />

        <ImageView
            android:id="@+id/pluto_blank"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:contentDescription="@string/mercury"
            app:srcCompat="@drawable/planet_unknown"
            android:layout_alignTop="@+id/marsBlank"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="21dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayoutPlanets"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:background="@color/blue_overlay"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/quickQuiz"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/true_false_title"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/tfQuizText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            tools:text="questions" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPlanets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/dark_blue_overlay"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/earth"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/earth"
            app:srcCompat="@drawable/earth" />

        <ImageView
            android:id="@+id/jupiter"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/jupiter"
            app:srcCompat="@drawable/jupiter" />

        <ImageView
            android:id="@+id/mars"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/mars"
            app:srcCompat="@drawable/mars" />

        <ImageView
            android:id="@+id/neptune"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/neptune"
            app:srcCompat="@drawable/neptune" />

        <ImageView
            android:id="@+id/saturn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/saturn"
            app:srcCompat="@drawable/saturn" />

        <ImageView
            android:id="@+id/venus"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/venus"
            app:srcCompat="@drawable/venus" />

        <ImageView
            android:id="@+id/uranus"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/uranus"
            app:srcCompat="@drawable/uranus" />

        <ImageView
            android:id="@+id/mercury"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/mercury"
            app:srcCompat="@drawable/mercury" />

        <ImageView
            android:id="@+id/pluto"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/mercury"
            app:srcCompat="@drawable/pluto" />

    </LinearLayout>

</RelativeLayout>
